--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,11 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "colored_logging",
+    "colored-logging",
     "pandas",
     "pillow",
     "geopandas",
+    "harmonized-landsat-sentinel>=1.1.0",
     "h5py",
     "matplotlib",
     "msgpack",
