--- a/ECOv002_L2T_STARS/STARS_jl/Project.toml
+++ b/ECOv002_L2T_STARS/STARS_jl/Project.toml
@@ -20,12 +20,14 @@ GaussianDistributions = "43dcc890-d446-5863-8d1a-14597580bb8d"
 GaussianRandomFields = "e4b2fa32-6e09-5554-b718-106ed5adafe9"
 GeoDataFrames = "62cb38b5-d8d2-4862-a48e-6a340996859f"
 GeoFormatTypes = "68eda718-8dee-11e9-39e7-89f7f65f511f"
+Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 NaNStatistics = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
+OpenSSL = "4d8831e6-92b7-49fb-bdf8-b643e874388c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
@@ -38,9 +40,9 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Trajectories = "2c80a279-213e-54d7-a557-e9a14725db56"
 
 [compat]
-julia = "1"
-Rasters = "~0.10.1"
 ArchGDAL = "=0.10.2, ~0.10.4"
+Rasters = "~0.10.1"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
